# qrc

./: README.md  pyproject.toml
src/qrc/: qrc.py
